--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -97,8 +97,9 @@
     <ClCompile Include="Actor\Wall.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Level\MenuLevel.cpp" />
-    <ClCompile Include="Level\SokobanLevel.cpp" />
+    <ClCompile Include="Level\SnowRPGLevel.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Util\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor\Box.h" />
@@ -109,7 +110,8 @@
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Interface\ICanPlayerMove.h" />
     <ClInclude Include="Level\MenuLevel.h" />
-    <ClInclude Include="Level\SokobanLevel.h" />
+    <ClInclude Include="Level\SnowRPGLevel.h" />
+    <ClInclude Include="Util\Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
