--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -90,11 +90,9 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Actor\Box.cpp" />
-    <ClCompile Include="Actor\Ground.cpp" />
+    <ClCompile Include="Actor\Envrionments\En_Empty.cpp" />
     <ClCompile Include="Actor\Player.cpp" />
-    <ClCompile Include="Actor\Target.cpp" />
-    <ClCompile Include="Actor\Wall.cpp" />
+    <ClCompile Include="Actor\Envrionments\En_Wall.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Level\MenuLevel.cpp" />
     <ClCompile Include="Level\SnowRPGLevel.cpp" />
@@ -102,11 +100,9 @@
     <ClCompile Include="Util\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Actor\Box.h" />
-    <ClInclude Include="Actor\Ground.h" />
+    <ClInclude Include="Actor\Envrionments\En_Empty.h" />
     <ClInclude Include="Actor\Player.h" />
-    <ClInclude Include="Actor\Target.h" />
-    <ClInclude Include="Actor\Wall.h" />
+    <ClInclude Include="Actor\Envrionments\En_Wall.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Interface\ICanPlayerMove.h" />
     <ClInclude Include="Level\MenuLevel.h" />
