--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -93,6 +93,8 @@
     <ClCompile Include="Actor\Envrionments\En_Empty.cpp" />
     <ClCompile Include="Actor\Player.cpp" />
     <ClCompile Include="Actor\Envrionments\En_Wall.cpp" />
+    <ClCompile Include="Component\BoxCollider.cpp" />
+    <ClCompile Include="Component\MoveComponent.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Level\MenuLevel.cpp" />
     <ClCompile Include="Level\SnowRPGLevel.cpp" />
@@ -103,6 +105,8 @@
     <ClInclude Include="Actor\Envrionments\En_Empty.h" />
     <ClInclude Include="Actor\Player.h" />
     <ClInclude Include="Actor\Envrionments\En_Wall.h" />
+    <ClInclude Include="Component\BoxCollider.h" />
+    <ClInclude Include="Component\MoveComponent.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Interface\ICanPlayerMove.h" />
     <ClInclude Include="Level\MenuLevel.h" />
