--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="Component\EnemyAI.cpp" />
     <ClCompile Include="Component\MoveComponent.cpp" />
     <ClCompile Include="Actor\Enemy\EnemySpawner.cpp" />
+    <ClCompile Include="Component\PlayerMoveComponent.cpp" />
     <ClCompile Include="Manager\GameManager.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Level\MenuLevel.cpp" />
@@ -120,11 +121,13 @@
     <ClInclude Include="Component\EnemyAI.h" />
     <ClInclude Include="Component\MoveComponent.h" />
     <ClInclude Include="Actor\Enemy\EnemySpawner.h" />
+    <ClInclude Include="Component\PlayerMoveComponent.h" />
     <ClInclude Include="Manager\GameManager.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Interface\ISpawner.h" />
     <ClInclude Include="Level\MenuLevel.h" />
     <ClInclude Include="Level\SnowRPGLevel.h" />
+    <ClInclude Include="Util\GameConstants.h" />
     <ClInclude Include="Util\Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
