--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Manager\GameManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Component\PlayerMoveComponent.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor\Player.h">
@@ -117,6 +120,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Manager\GameManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Component\PlayerMoveComponent.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\GameConstants.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
