--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="Component\ThiefMoveComponent.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Actor\Snow.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor\Player.h">
@@ -132,6 +135,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Component\ThiefMoveComponent.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Actor\Snow.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Interface\IDamageable.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
