--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="Actor\Snow.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Actor\Enemy\Spawner.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor\Player.h">
@@ -141,6 +144,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Interface\IDamageable.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Actor\Enemy\Spawner.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
