--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -92,6 +92,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Actor\DeadEffect.cpp" />
     <ClCompile Include="Actor\Enemy\Enemy.cpp" />
     <ClCompile Include="Actor\Enemy\Fly.cpp" />
     <ClCompile Include="Actor\Enemy\Spawner.cpp" />
@@ -115,6 +116,7 @@
     <ClCompile Include="Util\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actor\DeadEffect.h" />
     <ClInclude Include="Actor\Enemy\Enemy.h" />
     <ClInclude Include="Actor\Enemy\Fly.h" />
     <ClInclude Include="Actor\Enemy\Spawner.h" />
