--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="Actor\Enemy\Spawner.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Actor\DeadEffect.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor\Player.h">
@@ -147,6 +150,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Actor\Enemy\Spawner.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Actor\DeadEffect.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
